docs/k8s/mald-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  labels:
    app: website
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: website
